@@ -1,0 +1,7 @@
+layer at (0,0) size 2055x2063
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 2055x2063
+  RenderBlock {HTML} at (0,0) size 800x2063
+    RenderBody {BODY} at (8,8) size 784x2047
+      RenderBlock {DIV} at (0,0) size 2047x2047
+scrolled to 1255,1023
